# Embedded_SPL

./: config.yaml  executing_commands.txt  requirements.txt  utils.py
00_retrieve_audios/: retrieve_audios.py
01_recording/: record_audio.py  record_audio_multipart_concurrent_threads.py  record_audio_multipart_threads.py
02_acoustic_params/: acoustic_params.py  acoustic_params_no_bands.py  acoustic_params_optimized.py  acoustic_params_test.py  utils.py
03_inference/: inference_tflite.py  inference_tflite_old.py  inference_tflite_optimized.py
04_reset_pipeline/: reset_pipeline.py
Automatize/: 01_recording.sh  02_acoustic_params.sh  03_inference.sh  run_pipeline.sh  send_csvs.sh
Automatize rp/: 01_recording.sh  02_acoustic_params.sh  03_inference.sh  04_reset_pipeline.sh  run_pipeline.sh  send_csvs.sh
libs_c/: bindings.cpp  leq_levels_oct_weighting_C.cpp  utils.cpp  utils.hpp
libs_c_V2/: CMakeLists.txt  acoustic_processor.cpp  acoustic_processor.hpp  bindings.cpp
